--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
          <div class="item-center px-5 ">
             <h1 class="font-bold text-center text-slate-900" >Improve your front-end skills by building projects</h1>
-            <p class="text-slate-400 text-center text-sm ">Scan the QR code to visit Frontwnd Mentor and take your coding skills to the next level</p>
+            <p class="text-slate-400 text-center text-sm ">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
 
 
